ros2_ws/log/build_2025-01-06_13-51-02/peripherals/stderr.log
  File "/home/ro01/workspace/ros2_ws/install/peripherals/lib/python3.12/site-packages/peripherals/joystick_control.py", line 217
    def init_servo(self)
                        ^
SyntaxError: expected ':'

